# src/api/dto/shortn_url.go
@@ -1,5 +1,9 @@
 package dto
 
+import (
+	"time"
+)
+
 type CreateShortnUrlRequest struct {
 	OriginalURL string `json:"original_url" binding:"required"`
 }
@@ -10,10 +14,10 @@ type UpdateShortnUrlRequest struct {
 }
 
 type ShortnUrlResponse struct {
-	Id          int    `json:"id"`
-	OriginalURL string `json:"original_url"`
-	ShortCode   string `json:"short_code"`
-	AccessCount int    `json:"access_count"`
-	CreatedAt   string `json:"created_at"`
-	ModifiedAt  string `json:"modified_at"`
+	Id          int        `json:"id"`
+	OriginalURL string     `json:"original_url"`
+	ShortCode   string     `json:"short_code"`
+	AccessCount int        `json:"access_count"`
+	CreatedAt   time.Time  `json:"created_at"`
+	ModifiedAt  *time.Time `json:"modified_a,omitempty"`
 }
